--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
-boto3==1.35.52
-markdown==3.7
-djangorestframework==3.15.2
-pymysql==1.1.1
+boto3
+markdown
+djangorestframework
