--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,32 @@
 asgiref==3.8.1
+boto3==1.35.52
+botocore==1.35.52
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 cryptography==43.0.1
 defusedxml==0.8.0rc2
-
+Django==5.1.1
 django-allauth==65.0.2
+djangorestframework==3.15.2
 idna==3.10
+jmespath==1.0.1
+Markdown==3.7
+mysqlclient==2.2.5
 oauthlib==3.2.2
 pycparser==2.22
 PyJWT==2.9.0
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python3-openid==3.2.0
 requests==2.32.3
 requests-oauthlib==2.0.0
+s3transfer==0.10.3
+six==1.16.0
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
-boto3
-markdown
-djangorestframework
